Introducing Storage Access Groups to define the host and storage pool connections